--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sd-0x-project-iChoveu",
+  "name": "sd-35-project-iChoveu",
   "version": "1.0.0",
   "main": "script.js",
   "scripts": {
